update whatsapp number - final

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <section class="registration-cta animate-on-scroll">
         <h2>Дәл қазір тіркел!</h2>
-        <a href="https://wa.me77762349535" class="whatsapp-button" target="_blank">
+        <a href="https://wa.me/77762349535" class="whatsapp-button" target="_blank">
             <i class="fab fa-whatsapp"></i>
             WhatsApp арқылы тіркелу
         </a>
